post pages added with basic layout

--- a/Homepage.html
+++ b/Homepage.html
@@ -48,7 +48,7 @@
 
     <div id="postwindow">
         <div id="userinformation">
-            <div id="post">Posts</div>
+            <div id="post">Blogs</div>
             <button class="postheadings" id="ph1" onclick="post1()"></button>
             <button class="postheadings" id="ph2" onclick="post2()"></button>
             <button class="postheadings" id="ph3" onclick="post3()"></button>
@@ -67,13 +67,13 @@
                     </div>
                 </div>
                 <div class="postcontent" id="p1"></div>
-                <div class="read"><button class="ReadMore">Read More</button></div>
+                <div class="read"><button class="ReadMore" onclick="gotopost1()">Read More</button></div>
                 <div class="postrecord" id="k1">
                     <div class="likes"><i class="fa-solid fa-thumbs-up"></i>
-                        <div id="l1"></div>
+                        <div id="l1" class="likefont"></div>
                     </div>
                     <div class="dislikes"><i class="fa-solid fa-thumbs-down"></i>
-                        <div id="d1"></div>
+                        <div id="d1" class="likefont"></div>
                     </div>
                 </div>
             </div>
@@ -86,13 +86,13 @@
                     </div>
                 </div>
                 <div class="postcontent" id="p2"></div>
-                <div class="read"><button class="ReadMore">Read More</button></div>
+                <div class="read"><button class="ReadMore" onclick="gotopost2()">Read More</button></div>
                 <div class="postrecord" id="k2">
                     <div class="likes"><i class="fa-solid fa-thumbs-up"></i>
-                        <div id="l2"></div>
+                        <div id="l2" class="likefont"></div>
                     </div>
                     <div class="dislikes"><i class="fa-solid fa-thumbs-down"></i>
-                        <div id="d2"></div>
+                        <div id="d2" class="likefont"></div>
                     </div>
                 </div>
             </div>
@@ -105,13 +105,13 @@
                     </div>
                 </div>
                 <div class="postcontent" id="p3"></div>
-                <div class="read"><button class="ReadMore">Read More</button></div>
+                <div class="read"><button class="ReadMore" onclick="gotopost3()">Read More</button></div>
                 <div class="postrecord" id="k3">
                     <div class="likes"><i class="fa-solid fa-thumbs-up"></i>
-                        <div id="l3"></div>
+                        <div id="l3" class="likefont"></div>
                     </div>
                     <div class="dislikes"><i class="fa-solid fa-thumbs-down"></i>
-                        <div id="d3"></div>
+                        <div id="d3" class="likefont"></div>
                     </div>
                 </div>
             </div>
@@ -124,13 +124,13 @@
                     </div>
                 </div>
                 <div class="postcontent" id="p4"></div>
-                <div class="read"><button class="ReadMore">Read More</button></div>
+                <div class="read"><button class="ReadMore" onclick="gotopost4()">Read More</button></div>
                 <div class="postrecord" id="k4">
                     <div class="likes"><i class="fa-solid fa-thumbs-up"></i>
-                        <div id="l4"></div>
+                        <div id="l4" class="likefont"></div>
                     </div>
                     <div class="dislikes"><i class="fa-solid fa-thumbs-down"></i>
-                        <div id="d4"></div>
+                        <div id="d4" class="likefont"></div>
                     </div>
                 </div>
             </div>
@@ -143,13 +143,13 @@
                     </div>
                 </div>
                 <div class="postcontent" id="p5"></div>
-                <div class="read"><button class="ReadMore">Read More</button></div>
+                <div class="read"><button class="ReadMore" onclick="gotopost5()">Read More</button></div>
                 <div class="postrecord" id="k5">
                     <div class="likes"><i class="fa-solid fa-thumbs-up"></i>
-                        <div id="l5"></div>
+                        <div id="l5" class="likefont"></div>
                     </div>
                     <div class="dislikes"><i class="fa-solid fa-thumbs-down"></i>
-                        <div id="d5"></div>
+                        <div id="d5" class="likefont"></div>
                     </div>
                 </div>
             </div>
@@ -162,13 +162,13 @@
                     </div>
                 </div>
                 <div class="postcontent" id="p6"></div>
-                <div class="read"><button class="ReadMore">Read More</button></div>
+                <div class="read"><button class="ReadMore" onclick="gotopost6()">Read More</button></div>
                 <div class="postrecord" id="k6">
                     <div class="likes"><i class="fa-solid fa-thumbs-up"></i>
-                        <div id="l6"></div>
+                        <div id="l6" class="likefont"></div>
                     </div>
                     <div class="dislikes"><i class="fa-solid fa-thumbs-down"></i>
-                        <div id="d6"></div>
+                        <div id="d6" class="likefont"></div>
                     </div>
                 </div>
             </div>
