--- a/post3.html
+++ b/post3.html
@@ -47,7 +47,7 @@
         <div class="photopost" >
             <div class="photo"></div>
             <div class="postcontrol">
-                <div class="postname" id="a3"></div>
+                <div class="postname" id="a3" style="font-size: 2rem;"></div>
                 <div class="postauthor" id="z3"></div>
             </div>
         </div>
