--- a/post5.html
+++ b/post5.html
@@ -65,10 +65,10 @@
 
     <script >
         function gotohome(){
-            window.location.href="./Homepage.html";
+            window.location.href="./index.html";
         }
         function goback(){
-            window.location.href ="./Homepage.html"
+            window.location.href ="./index.html"
         }
 
         fetch("http://webmosaic.petrichor.events:8080/post?id=5")
