--- a/post6.html
+++ b/post6.html
@@ -65,10 +65,10 @@
 
     <script >
         function gotohome(){
-            window.location.href="./Homepage.html";
+            window.location.href="./index.html";
         }
         function goback(){
-            window.location.href ="./Homepage.html"
+            window.location.href ="./index.html"
         }
 
 
