--- a/post5.html
+++ b/post5.html
@@ -71,7 +71,7 @@
             window.location.href ="./index.html"
         }
 
-        fetch("http://webmosaic.petrichor.events:8080/post?id=5")
+        fetch("http://webmosaic.petrichor.events/post?id=5")
             .then(res => res.json())
             .then(data => {document.getElementById("p5").innerHTML = data.body ,
                 document.getElementById("a5").innerHTML = data.name,
@@ -79,7 +79,7 @@
                 document.getElementById("d5").innerHTML = data.dislikes
                 })
 
-        fetch("http://webmosaic.petrichor.events:8080/author?id=2")
+        fetch("http://webmosaic.petrichor.events/author?id=2")
             .then(res => res.json())
             .then(data =>document.getElementById("z5").innerHTML = "-by " +data.name
                                 )
