--- a/post1.html
+++ b/post1.html
@@ -70,7 +70,7 @@
         function goback(){
             window.location.href ="./index.html"
         }
-        fetch("http://webmosaic.petrichor.events/post?id=1")
+        fetch("https://webmosaic.petrichor.events/post?id=1")
             .then(res => res.json())
             .then(data => {document.getElementById("p1").innerHTML = data.body ,
                 document.getElementById("a1").innerHTML = data.name,
@@ -78,7 +78,7 @@
                 document.getElementById("d1").innerHTML = data.dislikes
                 })
 
-        fetch("http://webmosaic.petrichor.events/author?id=1")
+        fetch("https://webmosaic.petrichor.events/author?id=1")
             .then(res => res.json())
             .then(data =>document.getElementById("z1").innerHTML = "-by " +data.name
                 )
