--- a/post6.html
+++ b/post6.html
@@ -72,7 +72,7 @@
         }
 
 
-        fetch("http://webmosaic.petrichor.events/post?id=6")
+        fetch("https://webmosaic.petrichor.events/post?id=6")
             .then(res => res.json())
             .then(data => {document.getElementById("p6").innerHTML = data.body ,
                 document.getElementById("a6").innerHTML = data.name,
@@ -80,7 +80,7 @@
                 document.getElementById("d6").innerHTML = data.dislikes
                 })
 
-        fetch("http://webmosaic.petrichor.events/author?id=3")
+        fetch("https://webmosaic.petrichor.events/author?id=3")
             .then(res => res.json())
             .then(data =>document.getElementById("z6").innerHTML = "-by " +data.name
                 )
